Fix example env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=secret
-MONGO_USER_USERNAME=user
-MONGO_USER_PASSWORD=secret
+DTRA_USER_USERNAME=user
+DTRA_USER_PASSWORD=secret
